--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,5 +25,11 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.1
   charts_flutter: ^0.12.0
+  flutter_launcher_icons: "^0.11.0"
 flutter:
   uses-material-design: true
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
