--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -37,4 +37,4 @@ jobs:
         run: flutter pub get
         
       - name: Analyze
-        run: flutter analyze --no-fatal-infos --no-fatal-warnings
+        run: flutter analyze
